--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,10 @@ dependencies = [
     "sentence-transformers>=3.0.0",
     "termcolor>=2.0.1",
     "faiss-cpu",
-    "pydantic"
+    "pydantic",
+    "google-genai>=1.56.0",
+    "vertexai>=1.71.1",
+    "flagembedding>=1.3.5",
 ]
 
 [project.urls]
